Adjust warning message

--- a/templates/contacts/contactfield_delete.haml
+++ b/templates/contacts/contactfield_delete.haml
@@ -7,7 +7,7 @@
       <b>{{name}}</b> cannot be deleted since it is currently in use.
   -else
     -blocktrans trimmed with name=object.label 
-      Are you sure you want to delete <b>{{name}}</b>? This cannot be undone.
+      Are you sure you want to delete <b>{{name}}</b>? No way to undo this operation.
 
     .hidden
       %form(method="POST")
