--- a/templates/flows/flowlabel_delete.haml
+++ b/templates/flows/flowlabel_delete.haml
@@ -8,10 +8,7 @@
 
   -else
     -blocktrans trimmed with name=object.name
-      Are you sure you want to delete <b>{{name}}</b>? This cannot be undone.
-
-    %p
-      -trans "Once deleted, this label will be gone forever. There is no way to undo this operation."
+      Are you sure you want to delete <b>{{name}}</b>? No way to undo this operation.
 
     .hidden
       %form(method="POST")
