--- a/templates/msgs/label_delete.haml
+++ b/templates/msgs/label_delete.haml
@@ -1,9 +1,7 @@
 -extends 'includes/modal.html'
-
--load i18n
+-load i18n temba smartmin
 
 -block modal
-  
   -if error
     .alert-text.mb-4
       .title
@@ -12,12 +10,14 @@
       .message
         {{error}}
 
-  .flex
-    .confirm
-      -trans "Are you sure you want to delete"
-    .name.font-normal.pl-1
-      {{object.name}}?
+  -if object.children.all
+    -blocktrans trimmed with name=object.name
+      <b>{{name}}</b> cannot be deleted since it is a parent to other labels.
 
-  .hidden
-    %form(method="POST")
-      %input(type="submit" value="{{submit_button_name}}")
+  -else
+    -blocktrans trimmed with name=object.name
+      Are you sure you want to delete <b>{{name}}</b>? No way to undo this operation.
+
+    .hidden
+      %form(method="POST")
+        %input(type="submit" value="{{submit_button_name}}")
