Fix flow starts pagination only

--- a/templates/flows/flowstart_list.haml
+++ b/templates/flows/flowstart_list.haml
@@ -60,3 +60,5 @@
           %tr.empty_list
             %td(colspan='99')
               -trans "No flow starts"
+  - block paginator
+    -include "includes/pagination.haml"
