--- a/templates/includes/recipients.haml
+++ b/templates/includes/recipients.haml
@@ -6,10 +6,10 @@
   
   -for contact in contacts
     .item.contact.lbl.linked.ml-2(onclick="goto(event)" href="{% url 'contacts.contact_read' contact.uuid %}")
-      .icon.icon-user
+      .icon.icon-user.text-dark-alpha-300
       {{ contact.get_display }}
 
   -if query
     .item.query.lbl.linked.ml-2(onclick="goto(event)" href="{% url 'contacts.contact_list' %}?search={{ query|urlencode }}")
-      .icon.icon-filter
+      .icon.icon-filter.text-dark-alpha-300
       {{ query }}
