--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -206,7 +206,6 @@
       confirmation.addEventListener("temba-button-clicked", function(event){
         var code = confirmation.dataset.code;
         if(!event.detail.button.secondary) {
-          console.log('{% url "flows.flow_change_language" object.id %}?language=' + code);
           posterize('{% url "flows.flow_change_language" object.id %}?language=' + code);
         }
         confirmation.open = false;
@@ -228,24 +227,12 @@
     function handleChangeLanguage(code, name) {
 
       var confirmation = document.getElementById("confirm-language");
+      confirmation.classList.remove("hide");
       confirmation.dataset.code = code;
       
       var body = confirmation.querySelector('.body');
       body.innerHTML = body.innerHTML.replace(/%LANG%/g, name);
-      confirmation.open = true;
-      
-
-      /* var form = $('#change-language-form');
-      var url = $.url(form.attr("href"));
-      var body = form.find('.body').html().replace(/%LANG%/g, name);
-
-      form.attr("href", url.attr("path") + "?language=" + code);
-      var modal = new ConfirmationModal('{{ _("Change Language")|escapejs }}', body);
-      modal.addClass('alert');
-      modal.setListeners({onPrimary: function(){ form.click(); }}, false);
-      modal.setPrimaryButton('{{ _("Ok")|escapejs }}');
-      modal.show();
-      */
+      confirmation.open = true;      
     }
 
     const config = {
@@ -327,7 +314,7 @@
           -blocktrans trimmed
             This flow is in the process of being sent, this message will disappear once all contacts have been added to the flow.
 
-  %temba-dialog#confirm-language(header='{{_("Change Language")|escapejs}}' primaryButtonName='{{_("Update")|escapejs}}')
+  %temba-dialog.hide#confirm-language(header='{{_("Change Language")|escapejs}}' primaryButtonName='{{_("Update")|escapejs}}')
     .p-6.body
       -blocktrans trimmed with language="%LANG%"
         This will change the default language of the flow to <b>{{ language }}</b>. This means that by default the
