--- a/templates/flows/flow_results.haml
+++ b/templates/flows/flow_results.haml
@@ -290,22 +290,9 @@
     }
 
     function deleteRun(id) {
-
-      var modal = new ConfirmationModal("Delete Run", "Deleting this run will remove it from your flow's results. While the messages for the contact will remain, any record of this flow run will be gone forever.");
-      modal.addClass('alert');
-      modal.setListeners({
-        onPrimary: function(){
-          $("#run_" + id).fadeOut();
-
-          $.post('/flowrun/delete/' + id + '/').fail(function() {
-            // in the off chance we failed, bring it back
-            $("#run_" + id).fadeIn();
-          });
-
-          modal.dismiss();
-        }}, false);
-      modal.setPrimaryButton("Delete Run");
-      modal.show();
+      var dialog = document.getElementById("confirm-run-delete");
+      dialog.run = id;
+      dialog.open = true;
     }
 
     function updateCols() {      
@@ -441,6 +428,20 @@
     }
 
   :javascript
+
+    document.addEventListener("DOMContentLoaded", function() {
+      var dialog = document.getElementById("confirm-run-delete");
+      dialog.addEventListener("temba-button-clicked", function(event){
+        var id = dialog.run;
+        $("#run_" + id).fadeOut();        
+        if (!event.detail.button.secondary) {
+          $.post('/flowrun/delete/' + id + '/').fail(function() {
+            $("#run_" + id).fadeIn();
+          });
+        }
+        dialog.open = false;
+      });
+    });
 
     $('a[data-toggle="tab"]').on('shown.bs.tab', function(e){
       // reflow our charts when analytics is shown on the chance their dimensions have changed
@@ -603,6 +604,10 @@
 
 -block content
 
+  %temba-dialog#confirm-run-delete(header='{{ _("Delete Run")|escapejs }}' primaryButtonName='{{ _("Delete")|escapejs }}' destructive='true')
+    .p-6
+      -trans "Deleting this run will remove it from your flow's results. While the messages for the contact will remain, any record of this flow run will be gone forever."
+    
   .bg-white.p-4.rounded-lg
     %ul.nav.nav-tabs.mb-0
       %li.active
