Fix choose org page

--- a/templates/orgs/org_choose.haml
+++ b/templates/orgs/org_choose.haml
@@ -6,7 +6,7 @@
     -trans "Choose Workspace"
 
 -block content
-  -if True or not orgs
+  -if not orgs
     .my-6
       -trans "Your login is not associated with any workspace. Please contact your administrator to receive an invitation to a workspace."
 
