Add start from field and logic

--- a/templates/migrator/migrationtask_create.haml
+++ b/templates/migrator/migrationtask_create.haml
@@ -22,4 +22,9 @@
         containerCssClass: "select2-temba-field",
         placeholder: "{% trans 'Select an organization' %}"
       });
+      $("#id_start_from").select2({
+        width: "350px",
+        containerCssClass: "select2-temba-field",
+        placeholder: "{% trans 'Select a step to start from' %}"
+      });
     })(jQuery);
