--- a/templates/campaigns/campaign_list.haml
+++ b/templates/campaigns/campaign_list.haml
@@ -29,7 +29,7 @@
               -if org_perms.flows.flow_create
                 .w-64.mr-5
                   %temba-modax{ header:"Create Campaign", endpoint:"/campaign/create/" }
-                    .button-primary
+                    .button-primary.block
                       -trans "Create Campaign"
               
               .lp-nav.upper
