--- a/static/scss/tailwind.scss
+++ b/static/scss/tailwind.scss
@@ -95,7 +95,7 @@ a {
 }
 
 .button {
-  @apply px-6 py-3 leading-none text-lg shadow transition duration-300 text-center rounded-lg select-none whitespace-no-wrap font-normal;
+  @apply px-6 py-3 leading-none text-lg shadow transition duration-300 text-center rounded-lg select-none whitespace-no-wrap font-normal inline-block;
   margin-top: 1px;
 
   &:active {
