--- a/templates/contacts/contact_list.haml
+++ b/templates/contacts/contact_list.haml
@@ -22,7 +22,7 @@
 
         .left
           -if org_perms.contacts.contactimport_create
-            .button-primary(onclick="goto(event)" href="{% url 'contacts.contactimport_create' %}")
+            .button-primary.block(onclick="goto(event)" href="{% url 'contacts.contactimport_create' %}")
               -trans "Import Contacts"
 
           .lp-nav.upper
@@ -61,12 +61,12 @@
           .flex-grow
             -if org_perms.contacts.contact_create
               %temba-modax#create-label-modal(header='{% trans "Create Contact" %}' endpoint="{% url 'contacts.contact_create' %}")
-                .button-light.mt-3
+                .button-light.block.mt-3
                   - trans "Create Contact"
 
             -if org_perms.contacts.contactgroup_create
               %temba-modax#create-group-modal(header='{% trans "Create Group" %}' endpoint="{% url 'contacts.contactgroup_create' %}" onloaded="handleCreateGroupModalLoaded" onsubmitted="handleCreateGroupModalSubmitted")
-                .button-light.mt-3
+                .button-light.block.mt-3
                   - trans "Create Group"
 
         .right
