--- a/templates/msgs/message_box.haml
+++ b/templates/msgs/message_box.haml
@@ -35,7 +35,7 @@
             -if org_perms.msgs.broadcast_send
               .w-64.mr-5
                 %temba-modax#send-message-modal{ header:'{% trans "Send Message" %}', endpoint:"{% url 'msgs.broadcast_send' %}" }
-                  .button-primary{ onclick:"handleSendMessageClicked()"}
+                  .button-primary.block(onclick="handleSendMessageClicked()")
                     -trans "Send Message"
 
             .lp-nav.upper
@@ -82,12 +82,12 @@
             .flex-grow
               -if org_perms.msgs.label_create
                 %temba-modax#create-label-modal{ header:'{% trans "Create Label" %}', endpoint:"{% url 'msgs.label_create' %}", onloaded: "handleCreateLabelModalLoaded", onsubmitted: "handleCreateLabelModalSubmitted"}
-                  .button-light.mt-3
+                  .button-light.block.mt-3
                     - trans "Create Label"
                   
               -if org_perms.msgs.label_create_folder
                 %temba-modax{ header:'{% trans "Create Folder" %}', endpoint:"{% url 'msgs.label_create_folder' %}"}
-                  .button-light.mt-3
+                  .button-light.block.mt-3
                     -trans "Create Folder"
 
         -if has_messages
