--- a/templates/triggers/trigger_list.haml
+++ b/templates/triggers/trigger_list.haml
@@ -113,7 +113,7 @@
                             -else
                               -trans "is not scheduled"
 
-                        %td.overflow-y-scroll(style="max-height: 10rem;" onclick="handleRowSelection(this)" width="250px")
+                        %td(onclick="handleRowSelection(this)" width="250px")
                           -include "includes/recipients.haml" with groups=obj.groups.all contacts=obj.contacts.all
 
                       -empty
